# a2a-sap-network

./: .env  .env.example  .env.template  .gitignore  .gitmodules  .lighthouserc.js  .pylintrc  A2A_PROTOCOL_MIGRATION_GUIDE.md  AGENT_ANALYSIS_REPORT.md  AGENT_IMPLEMENTATION_STATUS_REPORT.md  AGENT_PORT_REGISTRY.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_READINESS_REPORT.md  DEPLOYMENT_STATUS_FINAL.md  DOCUMENTATION_INDEX.md  Dockerfile  FINAL_100_PERCENT_INTEGRATION_REPORT.md  FINAL_AGENT_SCAN_REPORT.md  FINAL_VERIFICATION_REPORT.md  LAUNCHPAD_VERIFICATION.md  LOCAL_TESTING_SETUP.md  MCP_FRAMEWORK_COMPLIANCE_REPORT.md  METRICS_IMPLEMENTATION.md  PLATFORM_STATUS_REPORT.md  README.md  REORGANIZATION_SUMMARY.md  SECURITY_GUIDELINES.md  STARTUP_STATUS.md  a2a_health_report.json  agent_scan_results.json  anonymous_function_scanner.py  check_js_syntax.js  comprehensive_health_check.py  conftest.py  cypress.config.js  deployment_config.json  deployment_readiness_report.json  deployment_validation_report.json  detailed_agent_analysis.json  detailed_agent_analysis.py  (+54 more)
a2aNetwork/: .dockerignore  .env.blockchain.template  .env.deployed  .env.development  .env.development.template  .env.example  .env.minimal  .env.template  .eslintrc.js  .gitignore  .pylintrc  Dockerfile.dev  ENTERPRISE_COMPLIANCE_REPORT.md  PRODUCTION_SAP_FIORI_LAUNCHPAD.md  RAPID_DEVELOPMENT_SETUP.md  REST_TO_A2A_MIGRATION_COMPLETE.md  agent6-security-report.json  blockchain-event-adapter.js  cdsrc.json  cdsrc_private.json  createSchema.js  db.sqlite-shm  db.sqlite-wal  default_env.json  default_env.template.json  deploy.cloud.json  deployTables.js  deploy_tables.sql  deployed-contracts.json  docker-compose.base.yml  docker-compose.dev.yml  docker-compose.development.yml  docker-compose.monitoring.yml  docker-compose.production.yml  docker-compose.yml  eslintrc.json  fix_enum_syntax.py  fix_extra_braces.py  fixes_completed.md  foundry.toml  (+23 more)
a2aNetwork/agents/: __init__.py  chatAgent.py
a2aNetwork/api/: __init__.py  networkClient.py  registryApi.py  sdkApi.py  trustApi.py
a2aNetwork/app/: Component.js  README.md  analytics-dashboard.html  aunchpadSimple.html  config.js  fioriLaunchpad.html  flp-bootstrap.js  flp-config.json  launchpad-fixed.html  launchpad-production.html  launchpad-server.js  launchpad.html  local-ui5-bootstrap.js  login.html  manifest.json  package.json  shellConfig.js  test-connection.html  test-launchpad.js  test-sap-ux.js  test-sap-visual.html  test-tiles.html  testManager.html
a2aNetwork/cli/: README.md  package.json  tsconfig.json
a2aNetwork/clients/: __init__.py  grokClient.py  hanaClient.py  perplexityClient.py  sqliteClient.py
a2aNetwork/config/: __init__.py  enterprise.yaml  environment.js  telemetryConfig.py
a2aNetwork/contracts/: A2AGovernor.sol  A2ATaskQueue.sol  A2ATimelock.sol  AgentServiceMarketplace.sol  CapabilityMatcher.sol  CapabilityMatcherOptimized.sol  IntelligentGasManager.sol  MultiSigManager.sol  PerformanceReputationSystem.sol  ReputationExchange.sol
a2aNetwork/core/: __init__.py  dataStore.py  lnnFallback.py  lnnQualityMonitor.py  telemetry.py
a2aNetwork/db/: aspectExtensions.cds  aspect_extensions.cds  change_tracking.cds  deploymentSchema.cds  draft_entities.cds  goalManagementSchema.cds  i18n-schema.cds  i18nSchema.cds  marketplaceSchema.cds  notificationSchema.cds  reputationSchema.cds  sap_aspects.cds  schema.cds  securityAudit.cds
a2aNetwork/debug-dashboard/: package.json  server.js
a2aNetwork/deployment/: btp_deployment.env
a2aNetwork/deployment-tools/: package.json
a2aNetwork/dev-services/: dev-services.cds  dev-services.js  index.js  package.json  server.js  websocket-service.js
a2aNetwork/docs-platform/: package.json  server.js
a2aNetwork/examples/: chat_agent_example.py
a2aNetwork/models/: notification.cds
a2aNetwork/registry/: a2aBlockchainBasic.py  a2aBlockchainV2.py  aiEnhancer.py  basicServer.py  client.py  router.py  runRegistryServer.py  searchService.py  service.py  simpleServer.py  storage.py  testliveNetwork.py
a2aNetwork/script/: Deploy.s.sol  DeployBDCA2A.s.sol  DeployBridgeContracts.s.sol  deployBdcOnly.s.sol
a2aNetwork/scripts/: agent1-ui-security-scan.js  agent2-ui-security-scan.js  agent3-ui-security-scan.js  agent4-ui-security-scan.js  agent5-ui-security-scan.js  agent6-ui-security-scan.js  agent7-ui-security-scan.js  checkSapStandards.js  deploy-btp.sh  deployBlockchainContracts.js  deployContractsSimple.js  deployGlean.sh  deployGovernance.js  deployReputationContract.js  deployTestContracts.js  deploy_to_cloud.sh  diagnosticTool.js  enterprise-deployment-check.js  final-security-scan.js  fix-agent11-template-literals.js  fix-console-logs.js  fix-db-imports.js  fix-remaining-template-literals.js  indexCodebase.js  initializeBlockchainData.js  initializeBlockchainStatsCorrectly.js  populateDevelopmentData.js  populateServicesSafely.js  populateTileData.js  populateTranslations.js  production-deploy.sh  quick-start.js  quickStatus.js  registerA2aAgents.js  registerAgentsOnBlockchain.js  registerAllAgentsUnique.js  registerMissingAgents.js  remove-debug-logging.js  runSealValidation.js  security-production-bypass.sh  (+22 more)
a2aNetwork/sdk/: __init__.py  agentBase.py  client.py  package.json  types.py
a2aNetwork/security/: agent0-security-scanner.js  agent1-security-scanner.js  agent10-compliance-report.md  agent10-security-report.json  agent10-security-scanner.js  agent11-compliance-report.md  agent11-security-report.json  agent11-security-scanner.js  agent12-compliance-report.md  agent12-security-scanner.js  agent13-security-scanner.js  agent14-security-scanner.js  agent15-security-scanner.js  agent2-security-report.json  agent2-security-scanner.js  agent3-security-report.json  agent3-security-scanner.js  agent4-security-report.json  agent4-security-scanner.js  agent5-security-report.json  agent5-security-scanner.js  agent6-security-report.json  agent6-security-scanner.js  agent7-security-report.json  agent7-security-scanner.js  agent8-compliance-report.md  agent8-security-report.json  agent8-security-scanner.js  (+4 more)
(+4254 files in other folders)
